<resources>
    <string name="app_name">Medisys</string>

    <!-- Login strings -->
    <string name="username_placeholder">Usuario</string>
    <string name="password_placeholder">Contraseña</string>
    <string name="login_button_text">Ingresar</string>

    <!-- Navigation menu options -->
    <string name="patients_menu_title">Pacientes</string>

    <!-- Action Bar Title -->
    <string name="add_patient_title">Nuevo Paciente</string>

    <!-- Patient Tabs Label -->
    <string name="patient_form_label">Datos Personales</string>
    <string name="patient_insurances_label">Obra Social</string>
    <string name="patient_history_label">Historia Clinica</string>

    <!-- Patient Fields Label -->
    <string name="patient_idtype_label">Tipo de Documento</string>
    <string name="patient_birth_date_label">Fecha de Nacimiento</string>
    <string name="patient_age_label">Edad</string>
    <string name="patient_phone_label">Telefono</string>
    <string name="patient_mobile_phone_label">Celular</string>
    <string name="patient_address_label">Domicilio</string>
    <string name="patient_first_name_label">Nombre</string>
    <string name="patient_last_name_label">Apellido</string>
    <string name="patient_id_number_label">Nro de Documento</string>
    <string name="patient_birthday_label">Fecha de Nacimiento</string>
    <string name="patient_phone_number_label">Telefono</string>
    <string name="patient_mobile_phone_number_label">Celular</string>
    <string name="patient_street_label">Calle</string>
    <string name="patient_street_number_label">Nro</string>
    <string name="patient_floor_label">Piso</string>
    <string name="patient_apartment_label">Dpto</string>




    <string name="title_activity_main_landing">MainLandingActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
