<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/editPatientPersonalInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/patientFirstNameTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/actionBarSize"
                android:paddingStart="@dimen/spacing_double"
                android:paddingLeft="@dimen/spacing_double"
                android:paddingEnd="@dimen/spacing_double"
                android:clipToPadding="false"
                android:transitionGroup="true"
                tools:ignore="UnusedAttribute,NewApi"
                android:textColorHint="@color/colorTextHint">
                <EditText
                    android:id="@+id/patientFirstNameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/spacing"
                    android:paddingLeft="@dimen/spacing"
                    android:paddingEnd="@dimen/spacing"
                    android:textSize="@dimen/edit_text_font_size"
                    android:fontFamily="sans-serif"
                    android:hint="@string/patient_first_name_label"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/patientLastNameTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/actionBarSize"
                android:paddingStart="@dimen/spacing_double"
                android:paddingLeft="@dimen/spacing_double"
                android:paddingEnd="@dimen/spacing_double"
                android:clipToPadding="false"
                android:transitionGroup="true"
                tools:ignore="UnusedAttribute,NewApi"
                android:textColorHint="@color/colorTextHint"
                android:layout_below="@id/patientFirstNameTextInputLayout">
                <EditText
                    android:id="@+id/patientLastNameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/spacing"
                    android:paddingLeft="@dimen/spacing"
                    android:paddingRight="@dimen/spacing"
                    android:textSize="@dimen/edit_text_font_size"
                    android:fontFamily="sans-serif"
                    android:hint="@string/patient_last_name_label"/>
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/patientIdTypeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/patientLastNameTextInputLayout">
            </Spinner>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/patientIdNumberTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/actionBarSize"
                android:paddingStart="@dimen/spacing_double"
                android:paddingLeft="@dimen/spacing_double"
                android:paddingEnd="@dimen/spacing_double"
                android:clipToPadding="false"
                android:transitionGroup="true"
                tools:ignore="UnusedAttribute,NewApi"
                android:textColorHint="@color/colorTextHint"
                android:layout_below="@id/patientLastNameTextInputLayout"
                android:layout_toEndOf="@id/patientIdTypeSpinner"
                android:layout_toRightOf="@id/patientIdTypeSpinner">
                <EditText
                    android:id="@+id/patientIdNumberText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/spacing"
                    android:paddingLeft="@dimen/spacing"
                    android:paddingEnd="@dimen/spacing"
                    android:textSize="@dimen/edit_text_font_size"
                    android:fontFamily="sans-serif"
                    android:hint="@string/patient_id_number_label"
                    android:inputType="number"
                    android:maxLength="8"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/patientBirthTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/actionBarSize"
                android:paddingStart="@dimen/spacing_double"
                android:paddingLeft="@dimen/spacing_double"
                android:paddingEnd="@dimen/spacing_double"
                android:clipToPadding="false"
                android:transitionGroup="true"
                tools:ignore="UnusedAttribute,NewApi"
                android:textColorHint="@color/colorTextHint"
                android:layout_below="@id/patientIdNumberTextInputLayout">
                <EditText
                    android:id="@+id/patientBirthdayText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/spacing"
                    android:paddingLeft="@dimen/spacing"
                    android:paddingEnd="@dimen/spacing"
                    android:textSize="@dimen/edit_text_font_size"
                    android:fontFamily="sans-serif"
                    android:hint="@string/patient_birthday_label"
                    android:focusable="false"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/patientPhoneTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/actionBarSize"
                android:paddingStart="@dimen/spacing_double"
                android:paddingLeft="@dimen/spacing_double"
                android:paddingEnd="@dimen/spacing_double"
                android:clipToPadding="false"
                android:transitionGroup="true"
                tools:ignore="UnusedAttribute,NewApi"
                android:textColorHint="@color/colorTextHint"
                android:layout_below="@id/patientBirthTextInputLayout">
                <EditText
                    android:id="@+id/patientPhoneText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/spacing"
                    android:paddingLeft="@dimen/spacing"
                    android:paddingEnd="@dimen/spacing"
                    android:textSize="@dimen/edit_text_font_size"
                    android:fontFamily="sans-serif"
                    android:hint="@string/patient_phone_number_label"
                    android:inputType="phone"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/patientMobilePhoneTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/actionBarSize"
                android:paddingStart="@dimen/spacing_double"
                android:paddingLeft="@dimen/spacing_double"
                android:paddingEnd="@dimen/spacing_double"
                android:clipToPadding="false"
                android:transitionGroup="true"
                tools:ignore="UnusedAttribute,NewApi"
                android:textColorHint="@color/colorTextHint"
                android:layout_below="@id/patientPhoneTextInputLayout">
                <EditText
                    android:id="@+id/patientMobilePhoneText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/spacing"
                    android:paddingLeft="@dimen/spacing"
                    android:paddingEnd="@dimen/spacing"
                    android:paddingRight="@dimen/spacing"
                    android:textSize="@dimen/edit_text_font_size"
                    android:fontFamily="sans-serif"
                    android:hint="@string/patient_mobile_phone_number_label"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/patientStreetLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/patientMobilePhoneTextInputLayout"
                android:weightSum="1"
                android:baselineAligned="false">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/patientStreetTextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:minHeight="?android:attr/actionBarSize"
                    android:paddingStart="@dimen/spacing"
                    android:paddingLeft="@dimen/spacing"
                    android:paddingEnd="@dimen/spacing"
                    android:paddingRight="@dimen/spacing"
                    android:clipToPadding="false"
                    android:transitionGroup="true"
                    tools:ignore="UnusedAttribute,NewApi"
                    android:textColorHint="@color/colorTextHint"
                    android:layout_weight="0.8">
                    <EditText
                        android:id="@+id/patientStreetText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/spacing"
                        android:paddingLeft="@dimen/spacing"
                        android:paddingEnd="@dimen/spacing"
                        android:paddingRight="@dimen/spacing"
                        android:textSize="@dimen/edit_text_font_size"
                        android:fontFamily="sans-serif"
                        android:hint="@string/patient_street_label" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/patientStreetNumberTextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:minHeight="?android:attr/actionBarSize"
                    android:paddingStart="@dimen/spacing"
                    android:paddingLeft="@dimen/spacing"
                    android:paddingEnd="@dimen/spacing"
                    android:clipToPadding="false"
                    android:transitionGroup="true"
                    tools:ignore="UnusedAttribute,NewApi"
                    android:textColorHint="@color/colorTextHint"
                    android:layout_weight="0.2">
                    <EditText
                        android:id="@+id/patientStreetNumberText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/spacing"
                        android:paddingLeft="@dimen/spacing"
                        android:paddingEnd="@dimen/spacing"
                        android:paddingRight="@dimen/spacing"
                        android:textSize="@dimen/edit_text_font_size"
                        android:fontFamily="sans-serif"
                        android:hint="@string/patient_street_number_label"
                        android:inputType="number"
                        android:maxLength="5"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Spinner
                android:id="@+id/patientProvinceSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/patientStreetLinearLayout">
            </Spinner>

            <Spinner
                android:id="@+id/patientDepartmentSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/patientProvinceSpinner">
            </Spinner>

            <Spinner
                android:id="@+id/patientTownSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/patientDepartmentSpinner">
            </Spinner>
        </RelativeLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>